# OnCourse-API

./: .gitignore  README.md  license  pyproject.toml  requirements.txt  setup.py
.github/workflows/: publish-pypi.yml
oncourse_api/: __init__.py  errors.py  oncourse.py
oncourse_api/mixins/: serialazation.py
oncourse_api/models/: __init__.py  active_profile.py  assignment.py  assignments.py  base.py  group.py  reportcard.py  student.py
oncourse_api/utils/: converters.py  serializer.py
