
[tool.poetry]
name = "oncourse-api"
version = "2.2.1"
description = "A python api wrapper for OnCourse Connect"
authors = ["Aiden <aiden8green@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.26.0"
tomli = "^1.2.2"
setuptools = "^58.4.0"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
black = {version = "^21.10b0", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
experimental-string-processing = true

[flake8]
max-line-length = 120
per-file-ignores = "__init__.py:F401"